fix spacing issue

--- a/assets/styles/pages/_all-pages.scss
+++ b/assets/styles/pages/_all-pages.scss
@@ -139,11 +139,7 @@ a.skip-main:focus {
     margin-bottom: govuk-px-to-rem(25);
 }
 .govuk-error-summary {
-    padding: govuk-px-to-rem(25);
     margin-bottom: govuk-px-to-rem(20);
-}
-.govuk-error-summary__title {
-    margin-bottom: govuk-px-to-rem(15);
 }
 .govuk-error-message {
     margin-bottom: govuk-px-to-rem(25);
